# gaze

./: .gitignore  README.md  main.py  pyproject.toml  requirements.txt
src/: utilities.py  version.py
