[tool.poetry]
name = "gaze"
version = "0.1.0"
description = "gaze is the tool to help you monitor different kind of resources."
authors = ["fahadahammed <iamfahadahammed@gmail.com>"]
license = "MIT"
readme = "README.md"
packages = [
    { include = "src/*" },
]

[tool.poetry.dependencies]
python = "^3.6"

[tool.poetry.dev-dependencies]
poetry = "^1.1.12"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.poetry.scripts]
gaze='main:__main__'
